# LabOS

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: bio_tasks.py  quick_start.py
labos/: __init__.py  cli.py  core.py  knowledge.py  memory.py  ui.py
labos/prompts/: critic.yaml  manager.yaml  researcher.yaml  toolmaker.yaml
labos/tools/: __init__.py  biosecurity.py  database.py  devenv.py  llm.py  screening.py  search.py  sequence.py  web.py
